--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.03MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.07MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-244.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-335.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-782.5KB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.64MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.37MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-310.2KB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
+  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-335.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-782.5KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.37MB/s(Youtube:不良林)
       - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
