--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -9,12 +9,12 @@ proxies:
   - {name: 🇨🇳 中国-3.03MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-244.1KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.50MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-310.2KB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
-  - {name: 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-506.4KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.51MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-598.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-585.9KB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-409.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-960.0KB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -25,12 +25,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -40,12 +40,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -56,12 +56,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -76,12 +76,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -91,12 +91,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -107,12 +107,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -132,12 +132,12 @@ proxy-groups:
       - 🇨🇳 中国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-244.1KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-310.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-506.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-598.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-585.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
