--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-461.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-406.9KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.51MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇩🇪 德国-960.0KB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-409.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇨🇭 瑞士-379.8KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: 103.56.60.235, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.59MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2, server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇭🇰 香港-402.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-885.0KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇭🇰 香港-2.52MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-461.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-406.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-330.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-960.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-409.0KB/s(Youtube:不良林)
       - 🇨🇭 瑞士-379.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.15MB/s(Youtube:不良林) 2
       - 🇭🇰 香港-402.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇫🇷 法国-885.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
